# stwo-zig

./: .gitignore  .mailmap  CONTRIBUTING.md  HANDOVER-2026-07-15.md  README.md  build.zig  cairo_bench  riscv_bench  riscv_trace_cli
.githooks/: pre-commit  pre-push
.github/workflows/: architecture-authority.yml  audit.yml  automerge.yml  benchmark-pages.yml  ci.yml  judge.yml  native-oracle.yml  (+5 more)
autoresearch/: .gitignore  MANIFEST.json  README.md  TASK.md
bench/: README.md
build_support/: benchmark_product_authority.zig  build_identity.zig  identity_test.zig  internal_build.zig  metal_core_aot.zig  metal_products.zig  product_policy_test.zig  prove_cli.zig  root_dispatcher.zig  verification_products.zig
conformance/: 2026-07-18-riscv-bias-audit.md  2026-07-18-riscv-logup-placement-audit.md  2026-07-18-riscv-public-field-audit.md  2026-07-18-riscv-release-goal.md  2026-07-19-build-architecture-authority-activation.md  2026-07-19-build-monorepo-baseline-epoch-2-amendment.md  2026-07-19-zig-build-monorepo-architecture.md  2026-07-19-zig-build-monorepo-delivery-goal.md  2026-07-21-metrics-v2-delivery-goal.md  2026-07-21-performance-authority-epoch-3-amendment.md  api-parity.md  benchmark-profiler-product-contract-v1.json  benchmark-profiler-product-contract-v1.md  build-architecture-authority-state-v1.json  build-architecture-ci-plan-v1.json  build-architecture-external-verifier-v1.json  build-architecture-performance-state-v1.json  build-architecture-receipt-protocol-v1.json  build-architecture-receipt-protocol.md  build-monorepo-baseline-v1.json  build-monorepo-performance-baseline-v2-protocol-v1.json  build-monorepo-performance-baseline-v2-protocol-v2.json  build-monorepo-performance-baseline-v2-protocol.md  ci-touchpoints-v1.json  decomposition-plan.md  divergence-log.md  riscv-oracle-build-cache.md  riscv-pr-proof-gate.md  riscv-release-evidence.md  source-baseline.json  upstream.md
docs/: README.md  cairo-fib-resident-metal-vs-simd.md  cairo-program-composition-projection.md  cairo-program-semantic-pack.md  cairo-zig-adapter.md  cairo-zig-prover-entrypoint.md  fib-backend-comparison.md  gpu-backend-design.md  metal-backend-progress.md  metal-profiling.md  metal-resident-prover-design.md  native-proof-backend-benchmark-2026-07-17.md  raw-stwo-wide-fibonacci-metal-vs-simd.md  riscv-fib-metal-vs-zig.md  riscv-rust-parity.md  sn-pie-metal-production-architecture.md  sn-pie-persistent-session.md  sn-pie-streaming.md
ethereum-guest/: Cargo.toml  riscv32im-zkvm.json
ethereum-guest/src/: atomics.rs  block_input.rs  executor.rs  main.rs  witness_db.rs
guest-sdk/: Cargo.toml
guest-sdk/examples/: smoke_test.rs
guest-sdk/src/: allocator.rs  entry.rs  io.rs  lib.rs  precompiles.rs  syscall.rs
mobile/: BOARD_SPEC.md  PARITY.md  README.md  build_ios_lib.sh
mobile/rust-bench/: Cargo.toml
mobile/rust-bench/examples/: print_report.rs
mobile/rust-bench/src/: lib.rs
scripts/: architecture_authority_dispatch.py  architecture_authority_tests.py  architecture_candidate_diagnostic.py  architecture_ci_artifact.py  architecture_ci_trust.py  architecture_external_authority.py  architecture_host_gate.py  architecture_native_metal_correctness.py  architecture_native_oracle.py  architecture_native_oracle_selection.py  architecture_native_oracle_transport.py  architecture_performance_readiness.py  architecture_riscv_anchor_selection.py  archive_native_matrix.py  autoresearch_workflow_policy.py  benchmark_delta.py  benchmark_full.py  benchmark_kernels.py  benchmark_pages.py  benchmark_smoke.py  build_architecture_receipt.py  build_crypto_guests.py  cairo_fib_backend_compare.py  cairo_input_checkpoint.py  cairo_program_benchmark.py  cairo_program_semantic_pack.py  capture_autoresearch_github_settings.py  check_aggregate_parity.py  check_api_parity.py  check_architecture_link_closure.py  check_autoresearch_activation.py  check_benchmark_product_contract.py  check_build_configure_closure.py  check_build_monorepo_baseline.py  check_downstream_package.py  check_library_products.py  check_native_cpu_product.py  check_native_metal_lifecycle.py  check_native_metal_product.py  check_product_closure.py  (+62 more)
soundness/: ROADMAP.md
src/: artifact_manifest.zig  artifact_store.zig  artifact_views.zig  cairo_bench_cli.zig  cairo_input_cli.zig  interop_cli.zig  metal_arena_plan_cli.zig  metal_arena_plan_test.zig  metal_backend_test.zig  metal_bench_cli.zig  metal_compact_bench_cli.zig  metal_ec_op_bench_cli.zig  metal_eval_prepare_cli.zig  metal_eval_source_cli.zig  metal_eval_test.zig  metal_prover_session_cli.zig  metal_prover_session_protocol.zig  metal_recovery_bench_cli.zig  metal_witness_source_cli.zig  native_cpu_product.zig  riscv_bench_cli.zig  riscv_cpu_product.zig  riscv_metal_bench_cli.zig  riscv_prover_test.zig  riscv_trace_cli.zig  riscv_trace_test.zig  statement_bootstrap_test.zig  stwo.zig  stwo_aggregate_cpu.zig  stwo_aggregate_metal.zig  stwo_deep.zig  stwo_native_cpu.zig  stwo_native_metal.zig  stwo_riscv_cpu.zig  tests.zig
tools/current-stwo-fib-bench/: Cargo.toml
tools/current-stwo-fib-bench/src/: main.rs
tools/prepare-block-input/: Cargo.toml
tools/prepare-block-input/src/: main.rs
tools/stark-v-trace-dump/: Cargo.toml
tools/stark-v-trace-dump/src/: main.rs  riscv_trace_cli.zig
tools/stwo-cairo-trace-oracle/: Cargo.toml  README.md  rust-toolchain.toml
tools/stwo-cairo-trace-oracle/src/: checkpoint.rs  input.rs  interaction.rs  main.rs
tools/stwo-cairo-verifier-rs/: Cargo.toml  README.md
tools/stwo-cairo-verifier-rs/examples/: compact_reference_check.rs
tools/stwo-cairo-verifier-rs/src/: compact_codec.rs  lib.rs  main.rs
tools/stwo-cairo-verifier-rs/tests/: cli.rs
tools/stwo-interop-rs/: Cargo.toml
tools/stwo-interop-rs/src/: backend_tests.rs  cli.rs  commands.rs  components.rs  lib.rs  main.rs  model.rs  profile.rs  proving.rs  statements.rs  traces.rs  wire.rs
vectors/riscv_guests/poseidon2_m31/: Cargo.toml  linker.ld  rust-toolchain.toml
vectors/riscv_guests/poseidon2_m31/.cargo/: config.toml
vectors/riscv_guests/poseidon2_m31/src/: main.rs
(+2739 files in other folders)
