[package]
name = "ethereum-guest"
version = "0.1.0"
edition = "2021"
description = "Ethereum block execution guest for stwo-zig RISC-V zkVM"
rust-version = "1.88.0"

[dependencies]
stwo-guest-sdk = { path = "../guest-sdk" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

# revm: no_std, pure-Rust crypto only (no C FFI, no asm)
# NOTE: No secp256k1 (uses C FFI), no c-kzg, no blst
revm = { version = "36", default-features = false, features = [
    "serde",
    "hashbrown",
    "dev",
] }

# Alloy primitives for Address, B256, U256 types
# Use native-keccak to redirect ALL keccak256 calls through our syscall
alloy-primitives = { version = "1", default-features = false, features = [
    "serde",
    "native-keccak",
] }

# Transaction decoding (RLP) and signer recovery
alloy-consensus = { version = "1", default-features = false, features = ["serde", "k256"] }
alloy-eips = { version = "1", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }

# State commitment hash
sha3 = { version = "0.10", default-features = false }

[[bin]]
name = "ethereum-guest"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
