[package]
name = "stwo-mobile-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
# Direct dep only to union the `pure` feature into the graph: blake3's C/asm
# build script needs the iOS SDK; pure-Rust mode builds anywhere. Perf note
# for phone rows: pure blake3 is somewhat slower — revisit when energy/wall
# numbers start counting.
blake3 = { version = "1", features = ["pure"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
stwo-interop-rs = { path = "../../tools/stwo-interop-rs" }

[profile.release]
lto = true
codegen-units = 1
