[package]
name = "peer-stwo-fib-bench"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
metal = [
    "stwo/metal",
    "stwo-constraint-framework/metal",
    "stwo-examples/metal",
    "dep:metal",
]

[dependencies]
itertools = "0.12"
num-traits = "0.2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
stwo = { git = "https://github.com/ClementWalter/stwo", rev = "07ea1ccca13351028da94e66babf79e7ce91437f", default-features = false, features = ["parallel", "prover"] }
stwo-constraint-framework = { git = "https://github.com/ClementWalter/stwo", rev = "07ea1ccca13351028da94e66babf79e7ce91437f", default-features = false, features = ["parallel", "prover"] }
stwo-examples = { git = "https://github.com/ClementWalter/stwo", rev = "07ea1ccca13351028da94e66babf79e7ce91437f", features = ["parallel"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }

[workspace]
members = []
