[package]
name = "prepare-block-input"
version = "0.1.0"
edition = "2021"
description = "Prepares Ethereum block input for the stwo-zig zkVM guest"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
alloy-primitives = { version = "1", features = ["serde"] }
alloy = { version = "1", features = ["full", "provider-debug-api"] }
alloy-eips = { version = "1" }
alloy-consensus = { version = "1" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha3 = "0.10"
