[package]
name = "stark-v-trace-dump"
version = "0.1.0"
edition = "2021"
description = "Self-contained RV32IM executor that loads a RISC-V ELF and dumps the execution trace as JSON"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
