[package]
name = "stwo-cairo-verifier-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[package.metadata.canonical-verifier]
envelope-abi = "STWZCVE/1"
stwo-cairo-repository = "https://github.com/teddyjfpender/stwo-cairo"
stwo-cairo-revision = "dcd5834565b7a26a27a614e353c9c60109ebc1d9"
stwo-repository = "https://github.com/teddyjfpender/stwo"
stwo-revision = "9d7e3d6fa0fc64a0d143a8b2fcb8ee952f4de8f2"

[dependencies]
cairo-air = { git = "https://github.com/teddyjfpender/stwo-cairo", rev = "dcd5834565b7a26a27a614e353c9c60109ebc1d9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
stwo = { git = "https://github.com/teddyjfpender/stwo", rev = "9d7e3d6fa0fc64a0d143a8b2fcb8ee952f4de8f2" }
stwo-cairo-common = { git = "https://github.com/teddyjfpender/stwo-cairo", rev = "dcd5834565b7a26a27a614e353c9c60109ebc1d9" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "unwind"
strip = "symbols"

# Keep this package isolated from any enclosing workspace or local [patch]
# section. Canonical verifier dependencies are exact-revision Git dependencies;
# path dependencies and patches are forbidden here.
[workspace]
