[package]
name = "stwo-interop-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "a8fcf4bdde3778ae72f1e6cfe61a38e2911648d2", features = ["prover", "parallel"] }
