[package]
name = "poseidon2-m31-guest"
version = "0.1.0"
edition = "2024"

# Self-contained RV32IM guest: no dependencies, only core + the vendored
# linker script. Reproducible from this repo alone with the pinned toolchain.
[[bin]]
name = "poseidon2_m31"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
